.playwright-mcp/console-2026-03-18T14-49-20-134Z.log
[     504ms] [WARNING] "textShadow*" style props are deprecated. Use "textShadow". @ http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:23599
[     642ms] [WARNING] props.pointerEvents is deprecated. Use style.pointerEvents @ http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:23599
[  248202ms] Error: TransformError SyntaxError: /Users/jackson/SwypeFly/components/swipe/SwipeCard.tsx: Expected corresponding JSX closing tag for <Pressable>. (116:4)

[0m [90m 114 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
 [90m 115 |[39m       [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 116 |[39m     [33m<[39m[33m/[39m[33mView[39m[33m>[39m
 [90m     |[39m     [31m[1m^[22m[39m
 [90m 117 |[39m   )[33m;[39m
 [90m 118 |[39m }
 [90m 119 |[39m[0m
    at showCompileError (http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:71400:19)
    at HMRClient.<anonymous> (http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:71320:13)
    at HMRClient.emit (http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:71651:31)
    at HMRClient._ws.onmessage (http://localhost:8082/index.ts.bundle?platform=web&dev=true&hot=false&lazy=true&transform.engine=hermes&transform.routerRoot=app&unstable_transformProfile=hermes-stable:71466:18)
